fix overflow

--- a/alatpemurni/style.css
+++ b/alatpemurni/style.css
@@ -2115,6 +2115,234 @@ footer img {
 }
 
 @media screen and (max-width: 1150px) {
+  .blur-content {
+    width: 100%;
+    height: 770rem;
+    position: absolute;
+    z-index: 97;
+    backdrop-filter: blur(0);
+    -webkit-backdrop-filter: blur(0);
+  }
+
+  .blur-content.form {
+    width: 100%;
+    height: 770rem;
+    position: absolute;
+    z-index: 97;
+    backdrop-filter: blur(80px);
+    -webkit-backdrop-filter: blur(80px);
+  }
+
+  .bg-pop-up {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(80px);
+    -webkit-backdrop-filter: blur(80px);
+    position: fixed;
+    z-index: 99;
+  }
+
+  .bg-pop-up.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
+    position: absolute;
+    z-index: 99;
+  }
+
+  .pop-up-form {
+    top: 80px;
+    width: 45rem;
+    height: 76rem;
+    overflow-y: unset; /* Add this line */
+    overflow-x: unset;
+  }
+
+  .form-ornament {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
+  .pop-up-form .ornament2 {
+    position: relative;
+    top: 110px;
+    right: -270px;
+    z-index: 999;
+    width: 12rem;
+  }
+
+  .pop-up-form .ornament1 {
+    width: 4.5rem;
+  }
+
+  .form-ornament .head-bg {
+    position: relative;
+    top: 0px;
+    width: 45rem;
+  }
+
+  .form-head {
+    text-align: center;
+    width: 87%;
+    margin-top: -120px;
+    margin-bottom: 110px;
+    z-index: 99;
+  }
+
+  .form-head img {
+    position: absolute;
+    left: 100px;
+  }
+
+  .form-head h3 {
+    font-family: var(--m-alertnates);
+    font-weight: var(--reguler);
+    font-size: 24px;
+    color: #57595c;
+  }
+
+  .form-head span {
+    font-family: var(--m-alertnates);
+    font-weight: var(--bold);
+    font-size: 24px;
+    color: var(--blue);
+  }
+
+  .form-body {
+    width: 87%;
+    /* position: absolute; */
+    z-index: 99;
+  }
+
+  .bottom-right .input {
+    margin-top: 3px !important;
+  }
+
+  .form-body .bottom {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 35px;
+  }
+
+  #konsultan-container {
+    margin-top: 35px !important;
+  }
+
+  .form-body input {
+    display: flex;
+  }
+
+  .form-body label {
+    font-size: 14px;
+    font-weight: var(--reguler);
+    color: var(--light-font);
+  }
+
+  .form-body .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .form-body .top-left {
+    width: 45%;
+  }
+
+  .form-body .top-right {
+    width: 45%;
+  }
+
+  .form-body .input {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+  }
+
+  .form-body input,
+  select {
+    width: 100%;
+    border: none;
+    border-radius: 40px;
+    background-color: var(--input-bg);
+    height: 44px;
+    margin-top: 10px;
+    padding-left: 20px;
+  }
+
+  .form-body textarea {
+    width: 100%;
+    border: none;
+    border-radius: 18px;
+    background-color: var(--input-bg);
+    height: 68px;
+    margin-top: 10px;
+    padding-left: 20px;
+    padding-top: 10px;
+    resize: vertical;
+  }
+
+  .form-body .bottom-left {
+    width: 48%;
+  }
+
+  .form-body .bottom-right {
+    width: 45%;
+  }
+
+  .form-body button {
+    width: 250px;
+    height: 44px;
+    border-radius: 40px;
+    background-color: var(--lightblue);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: var(--light);
+    border: none;
+    margin: 48px auto 48px auto;
+    position: relative;
+  }
+
+  .form-body span {
+    color: #e74c3c;
+  }
+
+  .pop-up-form::-webkit-scrollbar {
+    width: 8px;
+    height: 50%;
+    z-index: 9999; /* Tambahkan z-index di sini */
+    display: none;
+  }
+
+  .pop-up-form::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 20px;
+    height: 50%;
+    display: none;
+  }
+
+  .pop-up-form::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    height: 50%; /* Set the height to 50% */
+  }
+
+  .pop-up-form::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
   .footer-content h3 {
     font-size: 1.4rem;
   }
@@ -2336,13 +2564,13 @@ footer img {
   .bottom-right .input {
     margin-top: 3px !important;
   }
-  
+
   .form-body .bottom {
     display: flex;
     justify-content: space-between;
     margin-top: 35px;
   }
-  
+
   #konsultan-container {
     margin-top: 35px !important;
   }
@@ -2623,7 +2851,7 @@ footer img {
     width: 21rem;
     height: 22rem;
   }
-  
+
   .solusiudara-img-list .img-2 {
     width: 17rem;
     height: 24rem;
@@ -3273,7 +3501,7 @@ footer img {
     left: 2rem;
     top: 0.5rem;
   }
-  
+
   .solusiudara-img-list .img-2 {
     width: 13.5rem;
     height: 19rem;
